syntax = "proto3";

package payments_v1;

option go_package = "github.com/lee-aaron/stripe-go/customer";

message CustomerCreateRequest {
  string customer_name = 1;
  string customer_email = 2;
  map<string, string> metadata = 3;
  string stripe_account = 4;
}

message CustomerCreateReply {
  string customer_id = 1;
}

message CustomerGetRequest {
  string customer_id = 1;
  string stripe_account = 2;
}

message CustomerGetReply {
  string customer_name = 1;
  string customer_email = 2;
  map<string, string> metadata = 3;
}

message CustomerDeleteRequest {
  string customer_id = 1;
  string stripe_account = 2;
}

message CustomerDeleteReply {
  bool deleted = 1;
}

service CustomerHandler {
  rpc CreateCustomer(CustomerCreateRequest) returns (CustomerCreateReply);
  rpc GetCustomer(CustomerGetRequest) returns (CustomerGetReply);
  rpc DeleteCustomer(CustomerDeleteRequest) returns (CustomerDeleteReply);
}